<resources>
    <string name="app_name">Video Chat</string>
    <string name="video_calling_demo">Video Calling Demo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_name">Name</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="btn_register">Register</string>
    <string name="tv_login">Already have an account? Login</string>
    <string name="tv_register">Don\'t have an account? Sign Up</string>
    <string name="tv_username">Username</string>
    <string name="login">Login</string>
    <string name="videochat">VideoChat</string>
    <string name="room_name">Room Name</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="invite_to_call">Invite to call</string>
    <string name="other_users_registered_on_the_app">Other users registered on the app :</string>
    <string name="name">Name</string>
</resources>
